# automatic-diary

./: .ackrc  .editorconfig  .gitignore  Makefile  NOTICE  Pipfile  README.md  automatic-diary  automatic-diary-visualize  automatic-journal  automatic_journal  config-sample.json  pyproject.toml  setup.cfg  setup.py  sort  tox.ini
automatic_diary/: __init__.py  __main__.py  cache.py  cli.py  common.py  model.py  shell.py  visualize.py
automatic_diary/providers/caldav/: main.py
automatic_diary/providers/csfd/: main.py
automatic_diary/providers/csv/: main.py
automatic_diary/providers/facebook/: main.py
automatic_diary/providers/git/: main.py
automatic_diary/providers/icalendar/: main.py
automatic_diary/providers/maildir/: main.py
automatic_diary/providers/orgmode/: main.py
automatic_diary/providers/orgmodelist/: main.py
automatic_diary/providers/todotxt/: main.py
automatic_diary/providers/trakt/: main.py
automatic_diary/providers/twitter/: main.py
automatic_diary/providers/txt/: main.py
automatic_diary/templates/: template.html
automatic_diary/tests/: test_cli.py  test_csfd.py  test_facebook.py  test_icalendar.py  test_orgmode.py  test_orgmodelist.py  test_shell.py  test_txt.py  test_visualize.py
automatic_diary/tests/test_data/: calendar.ics
automatic_journal/: __init__.py  __main__.py  cli.py  common.py
automatic_journal/providers/caldav/: main.py
automatic_journal/providers/csfd/: main.py
automatic_journal/providers/csv/: main.py
automatic_journal/providers/facebook/: main.py
automatic_journal/providers/git/: main.py
automatic_journal/providers/icalendar/: main.py
automatic_journal/providers/maildir/: main.py
automatic_journal/providers/orgmode/: main.py
automatic_journal/providers/todotxt/: main.py
automatic_journal/providers/twitter/: main.py
automatic_journal/providers/txt/: main.py
automatic_journal/tests/: test_facebook.py  test_orgmode.py  test_txt.py
lib/: call_providers  git_commit  sort  sort_journal
providers/caldav/: main.py
providers/csfd/: main.py
providers/git/: main  main.py  main.sh
providers/maildir/: main.py
result/: diary.css  diary.js
