[tool.poetry]
name = "automatic-diary"
version = "0.4.0"
description = "Create one timeline from various digital sources discribing your life."
authors = ["Jakub Valenta <jakub@jakubvalenta.cz>"]
license = "GNU General Public License v3 or later (GPLv3+)"

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.10.0"
caldav = "^0.8.0"
dateparser = "^1.0.0"
ics = {git = "https://github.com/ics-py/ics-py.git", branch = "main"}
Jinja2 = "^3.0.1"
more-itertools = "^8.10.0"
pystache = "^0.5.4"
python-dateutil = "^2.8.2"
requests = "^2.26.0"
tzlocal = "^3.0"
orgparse = "^0.2.4"
"trakt.py" = "^4.4.0"

[tool.poetry.dev-dependencies]
ddt = "^1.4.2"
flake8 = "^3.9.2"
isort = "^5.9.3"
mypy = "^0.910"
types-requests = "^2.25.6"
types-python-dateutil = "^2.8.0"
types-dateparser = "^1.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
