[tool.poetry]
name = "automatic-diary"
version = "0.5.0"
description = "Create one timeline from various digital sources discribing your life."
authors = ["Jakub Valenta <jakub@jakubvalenta.cz>"]
license = "GPLv3+"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Utilities",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[tool.poetry.dependencies]
Jinja2 = "^3.1.4"
beautifulsoup4 = "^4.12.3"
caldav = "^1.3.9"
dateparser = "^1.2.0"
ics = {git = "https://github.com/ics-py/ics-py.git", branch = "main"}
lxml = "^5.3.0"
more-itertools = "^10.5.0"
orgparse = "^0.4.20231004"
pystache = "^0.6.5"
python = "^3.9"
python-dateutil = "^2.9.0.post0"
requests = "^2.32.3"
"trakt.py" = "^4.4.0"
tzlocal = "^5.2"

[tool.poetry.scripts]
automatic-diary = "automatic_diary.cli:main"
automatic-diary-visualize = "automatic_diary.visualize:main"

[tool.poetry.group.dev.dependencies]
ddt = "^1.7.2"
isort = "^5.13.2"
mypy = "^1.11.2"
types-requests = "^2.32.0.20240914"
types-python-dateutil = "^2.9.0.20240906"
types-dateparser = "^1.2.0.20240420"
flake8-pyproject = "^1.2.3"
flake8-pydocstyle = "^0.2.4"
flake8-pytest-style = "^2.0.0"
pytest = "^8.3.3"

[tool.flake8]
extend-ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D107", "PT009"]
max-line-length = 100

[tool.isort]
profile = "django"
line_length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
